
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************
 * (02/07/2012) kivan
	# 257
	
	CHANGED: JerpaLang jar and resource bundles - new translations
	CHANGED: ImportWizard now has ILanguage interface, fixing back some rewritten actions with ILanguage
	CHANGED: ImportWizard and BlobViewer are now connected to Working (i.e. EDEDB displays that they are working)
	CHANGED: EDEDB should be from the most part in state as it was before ededb core and data layer rewritting.
	ADDED: some classes (import file table model,...) created due to refactoring and fixing of existing code
 
 * (02/07/2012) kivan
	# 256
	
	ADDED: ImportWizardLogic: logic part of import wizard. incomplete, but almost finished.
	CHANGED: minor edits in ImportWizard, ImportTableModel and ActionImportWizard
	CHANGED: HibernateUtil.rebind now returns rebinded object

 * (02/06/2012) kivan
	# 255
	
	ADDED: GUI part of Import Wizard for importing data files into database.
	ADDED: ImportFilesTableModel - data model for table in Import Wizard.
	CHANGED: some POJO classes of db extended of toString method
	ADDED: added action to Import to DB buttons in EDEDB

 * (02/06/2012) kivan
	# 254
	
	ADDED: BlobViewer: so far only for text files. (issue with Blob.getBinaryStream().read(byte[]) - does not read whole blob, god knows why. Working workaround with Blob.getBytes)
	CHANGED: DataFilesTable: after double-click on data file, BlobViewer is opened.
	CHANGED: Removed dependency on ExperimentTable value od id - value is not converted from view to model wherever is needed.

 * (02/05/2012) kivan
	# 253
	
	CHANGED: way of creating experiment view is a bit different now (more separate classes) - necessary because of MouseListener in each table.